--- a/summative1-1.ipynb
+++ b/summative1-1.ipynb
@@ -1738,13 +1738,367 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "4a387bba",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Attendance</th>\n",
+       "      <th>Standard Deviation of Attendance</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Module Name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Epidemiology</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Nursing</th>\n",
+       "      <td>0.993333</td>\n",
+       "      <td>0.081650</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>English Literature</th>\n",
+       "      <td>0.975000</td>\n",
+       "      <td>0.156615</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Creative Writing</th>\n",
+       "      <td>0.967105</td>\n",
+       "      <td>0.178951</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Religious Studies</th>\n",
+       "      <td>0.958333</td>\n",
+       "      <td>0.200664</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cybersecurity</th>\n",
+       "      <td>0.957055</td>\n",
+       "      <td>0.203044</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Data Science</th>\n",
+       "      <td>0.942105</td>\n",
+       "      <td>0.234161</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>French</th>\n",
+       "      <td>0.928205</td>\n",
+       "      <td>0.258480</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Political Science</th>\n",
+       "      <td>0.921053</td>\n",
+       "      <td>0.273276</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Music Theory</th>\n",
+       "      <td>0.916290</td>\n",
+       "      <td>0.277267</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Medicine</th>\n",
+       "      <td>0.905063</td>\n",
+       "      <td>0.293592</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Linear Algebra</th>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>0.301077</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Demographics</th>\n",
+       "      <td>0.885714</td>\n",
+       "      <td>0.318918</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Linguistics</th>\n",
+       "      <td>0.882051</td>\n",
+       "      <td>0.322754</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Geography</th>\n",
+       "      <td>0.868304</td>\n",
+       "      <td>0.338538</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Information Technology</th>\n",
+       "      <td>0.842857</td>\n",
+       "      <td>0.366563</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cloud Computing</th>\n",
+       "      <td>0.840426</td>\n",
+       "      <td>0.366406</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Leadership</th>\n",
+       "      <td>0.825000</td>\n",
+       "      <td>0.380647</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Occupational Therapy</th>\n",
+       "      <td>0.815789</td>\n",
+       "      <td>0.390232</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Journalism</th>\n",
+       "      <td>0.807131</td>\n",
+       "      <td>0.394871</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Quality Assurance</th>\n",
+       "      <td>0.784242</td>\n",
+       "      <td>0.411596</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Business Intelligence</th>\n",
+       "      <td>0.782051</td>\n",
+       "      <td>0.415525</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Discrete Mathematics</th>\n",
+       "      <td>0.776786</td>\n",
+       "      <td>0.418272</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ethics</th>\n",
+       "      <td>0.759887</td>\n",
+       "      <td>0.427757</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Arabic</th>\n",
+       "      <td>0.752266</td>\n",
+       "      <td>0.432023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Algorithms</th>\n",
+       "      <td>0.744737</td>\n",
+       "      <td>0.436200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Nutrition</th>\n",
+       "      <td>0.725000</td>\n",
+       "      <td>0.447635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Public Speaking</th>\n",
+       "      <td>0.712069</td>\n",
+       "      <td>0.453190</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>System Administration</th>\n",
+       "      <td>0.678333</td>\n",
+       "      <td>0.467506</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Chemistry</th>\n",
+       "      <td>0.675000</td>\n",
+       "      <td>0.469027</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>International Business</th>\n",
+       "      <td>0.669691</td>\n",
+       "      <td>0.470752</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Japanese</th>\n",
+       "      <td>0.663717</td>\n",
+       "      <td>0.473486</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Marketing</th>\n",
+       "      <td>0.662500</td>\n",
+       "      <td>0.474342</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Biomedical Engineering</th>\n",
+       "      <td>0.650000</td>\n",
+       "      <td>0.483046</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Database Design</th>\n",
+       "      <td>0.645238</td>\n",
+       "      <td>0.479012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Digital Systems</th>\n",
+       "      <td>0.622807</td>\n",
+       "      <td>0.485750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Italian</th>\n",
+       "      <td>0.622517</td>\n",
+       "      <td>0.486371</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Biology</th>\n",
+       "      <td>0.618750</td>\n",
+       "      <td>0.486454</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Arts &amp; Crafts</th>\n",
+       "      <td>0.605263</td>\n",
+       "      <td>0.489715</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Spanish</th>\n",
+       "      <td>0.571429</td>\n",
+       "      <td>0.496564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Project Management</th>\n",
+       "      <td>0.571264</td>\n",
+       "      <td>0.495180</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Web Development</th>\n",
+       "      <td>0.566667</td>\n",
+       "      <td>0.497613</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>User Experience Design</th>\n",
+       "      <td>0.554167</td>\n",
+       "      <td>0.498096</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>History</th>\n",
+       "      <td>0.553333</td>\n",
+       "      <td>0.497562</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pharmacy</th>\n",
+       "      <td>0.538333</td>\n",
+       "      <td>0.498944</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Theater</th>\n",
+       "      <td>0.521429</td>\n",
+       "      <td>0.500136</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Statistics</th>\n",
+       "      <td>0.485714</td>\n",
+       "      <td>0.500691</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Data Analysis</th>\n",
+       "      <td>0.466667</td>\n",
+       "      <td>0.504525</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Strategic Planning</th>\n",
+       "      <td>0.436364</td>\n",
+       "      <td>0.498204</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Graphic Design</th>\n",
+       "      <td>0.065574</td>\n",
+       "      <td>0.247790</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        Average Attendance  Standard Deviation of Attendance\n",
+       "Module Name                                                                 \n",
+       "Epidemiology                      1.000000                          0.000000\n",
+       "Nursing                           0.993333                          0.081650\n",
+       "English Literature                0.975000                          0.156615\n",
+       "Creative Writing                  0.967105                          0.178951\n",
+       "Religious Studies                 0.958333                          0.200664\n",
+       "Cybersecurity                     0.957055                          0.203044\n",
+       "Data Science                      0.942105                          0.234161\n",
+       "French                            0.928205                          0.258480\n",
+       "Political Science                 0.921053                          0.273276\n",
+       "Music Theory                      0.916290                          0.277267\n",
+       "Medicine                          0.905063                          0.293592\n",
+       "Linear Algebra                    0.900000                          0.301077\n",
+       "Demographics                      0.885714                          0.318918\n",
+       "Linguistics                       0.882051                          0.322754\n",
+       "Geography                         0.868304                          0.338538\n",
+       "Information Technology            0.842857                          0.366563\n",
+       "Cloud Computing                   0.840426                          0.366406\n",
+       "Leadership                        0.825000                          0.380647\n",
+       "Occupational Therapy              0.815789                          0.390232\n",
+       "Journalism                        0.807131                          0.394871\n",
+       "Quality Assurance                 0.784242                          0.411596\n",
+       "Business Intelligence             0.782051                          0.415525\n",
+       "Discrete Mathematics              0.776786                          0.418272\n",
+       "Ethics                            0.759887                          0.427757\n",
+       "Arabic                            0.752266                          0.432023\n",
+       "Algorithms                        0.744737                          0.436200\n",
+       "Nutrition                         0.725000                          0.447635\n",
+       "Public Speaking                   0.712069                          0.453190\n",
+       "System Administration             0.678333                          0.467506\n",
+       "Chemistry                         0.675000                          0.469027\n",
+       "International Business            0.669691                          0.470752\n",
+       "Japanese                          0.663717                          0.473486\n",
+       "Marketing                         0.662500                          0.474342\n",
+       "Biomedical Engineering            0.650000                          0.483046\n",
+       "Database Design                   0.645238                          0.479012\n",
+       "Digital Systems                   0.622807                          0.485750\n",
+       "Italian                           0.622517                          0.486371\n",
+       "Biology                           0.618750                          0.486454\n",
+       "Arts & Crafts                     0.605263                          0.489715\n",
+       "Spanish                           0.571429                          0.496564\n",
+       "Project Management                0.571264                          0.495180\n",
+       "Web Development                   0.566667                          0.497613\n",
+       "User Experience Design            0.554167                          0.498096\n",
+       "History                           0.553333                          0.497562\n",
+       "Pharmacy                          0.538333                          0.498944\n",
+       "Theater                           0.521429                          0.500136\n",
+       "Statistics                        0.485714                          0.500691\n",
+       "Data Analysis                     0.466667                          0.504525\n",
+       "Strategic Planning                0.436364                          0.498204\n",
+       "Graphic Design                    0.065574                          0.247790"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here\n",
-    "..."
+    "# The first thing we need to do is group the data on a per module basis. \n",
+    "# And then via that grouping, we calculate the mean and std of attendance\n",
+    "# And then we slap all the values into a new dataframe \n",
+    "\n",
+    "ACs_hit_list = the_summative_df.groupby('Module Name')['Has Attended'].aggregate(['mean', 'std'])\n",
+    "\n",
+    "# Now we do some simple aesthetic stuff for our dataframe\n",
+    "ACs_hit_list.columns = ['Average Attendance', 'Standard Deviation of Attendance'] # Renames columns\n",
+    "ACs_hit_list = ACs_hit_list.sort_values('Average Attendance', ascending = False) # makes it highest to lowest\n",
+    "\n",
+    "ACs_hit_list\n"
    ]
   },
   {
